Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2013-02-14)
----------------

- removed a pdb left in the code
  [keul]
- minor style fixes
  [keul]

0.1 (2013-02-13)
----------------

- Initial release
  [fdelia]